--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -23,6 +23,7 @@ body {
 .card {
     border-radius: $borderRadius;
     img {
+        width: 100%;
         border-top-left-radius: $borderRadius;
         border-top-right-radius: $borderRadius;
     }
