--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ body {
   background-color: #e0e8ff;
 }
 
-.container {
+main {
   padding: 50px 30px;
   max-width: 30rem;
 }
@@ -103,8 +103,8 @@ body {
   color: rgba(0, 0, 0, 0.74);
 }
 
-@media (min-width: 990px) {
-  .container {
+@media (min-width: 500px) {
+  main {
     margin: 50px auto;
   }
   .card {
