--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -15,7 +15,7 @@ body {
     background-color: $paleBlue;
 }
 
-.container {
+main {
     padding: 50px 30px;
     max-width: 30rem;
 }
@@ -104,8 +104,8 @@ body {
     color: hsla(0, 0%, 0%, 0.74);
 }
 
-@media (min-width: 990px) {
-    .container {
+@media (min-width: 500px) {
+    main {
         margin: 50px auto;
     }
 
